[project]
name = "hvac"
version = "1.2"
description = "this is for hvac systems anomaly detection"
authors = [
    {name = "msheeba4848",email = "143460007+msheeba4848@users.noreply.github.com"}
]
license = {text = "private"}
readme = "README.md"
requires-python = "yes"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
